posting and consequent changes